--- a/.github/workflows/main_velaphicore-bridgeapi-staging.yml
+++ b/.github/workflows/main_velaphicore-bridgeapi-staging.yml
@@ -24,10 +24,10 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build src/BridgeAPI.sln --configuration Release
+        run: dotnet build BridgeAPI.sln --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish  src/BridgeAPI/BridgeAPI.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish BridgeAPI/BridgeAPI.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
