--- a/.github/workflows/main_velaphicore-bridgeapi-staging.yml
+++ b/.github/workflows/main_velaphicore-bridgeapi-staging.yml
@@ -27,7 +27,7 @@ jobs:
         run: dotnet build BridgeAPI.sln --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish BridgeAPI/BridgeAPI.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish  src/BridgeAPI/BridgeAPI.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
