--- a/src/BridgeAPI/appsettings.json
+++ b/src/BridgeAPI/appsettings.json
@@ -6,5 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "RouterName": "Router"
+  "RouterName": "TestApp",
+  "UserAuthApiBaseUrl": "http://velaphicore-userauthapi-staging-apech7h3a0czgvfc.eastus2-01.azurewebsites.net/",
+  "ApiKey": "ca0379c5ac61a7a2d7468c048dd27d23",
+  "BaseAddress": "http://velaphicore-userauthapi-staging-apech7h3a0czgvfc.eastus2-01.azurewebsites.net"
 }
